--- a/localization-management-frontend/package.json
+++ b/localization-management-frontend/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.50.1",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-devtools": "^5.81.2",
+    "axios": "^1.10.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
