--- a/localization-management-frontend/package.json
+++ b/localization-management-frontend/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:chrome": "playwright test --project=chromium --headed",
+    "test:firefox": "playwright test --project=firefox --headed",
+    "test:safari": "playwright test --project=webkit --headed",
+    "test:debug": "PWDEBUG=1 playwright test --headed"
   },
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
