--- a/localization-management-api/requirements.txt
+++ b/localization-management-api/requirements.txt
@@ -1,6 +1,5 @@
-fastapi
-uvicorn[standard]
-python-dotenv
-supabase
-pytest
-pytest-asyncio
+fastapi==0.115.14
+uvicorn[standard]==0.35.0
+python-dotenv==1.1.1
+supabase==2.16.0
+pytest==8.4.1
