--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,29 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "localization-management-frontend/package.json",
-        "use": "@vercel/next",
-        "config": {
-          "distDir": ".next"
-        }
-      },
-      {
-        "src": "localization-management-api/src/localization_management_api/main.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "localization-management-frontend/package.json",
+      "use": "@vercel/next",
+      "config": {
+        "distDir": ".next",
+        "middleware": true
       }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "localization-management-api/src/localization_management_api/main.py"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "localization-management-frontend/$1"
-      }
-    ]
+    },
+    {
+      "src": "localization-management-api/src/localization_management_api/main.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb" }
+    }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { 
+      "src": "/api/(.*)",
+      "dest": "localization-management-api/src/localization_management_api/main.py"
+    },
+    { 
+      "src": "/(.*)",
+      "dest": "/localization-management-frontend/$1"
+    }
+  ]
 }
