--- a/vercel.json
+++ b/vercel.json
@@ -10,10 +10,10 @@
       }
     },
     {
-      "src": "localization-management-api/vercel.json",
-      "use": "@vercel/static-build",
+      "src": "localization-management-api/src/localization_management_api/main.py",
+      "use": "@vercel/python",
       "config": {
-        "distDir": "dist"
+        "maxLambdaSize": "15mb"
       }
     }
   ],
@@ -21,7 +21,7 @@
     { "handle": "filesystem" },
     {
       "src": "/api/(.*)",
-      "dest": "/localization-management-api/$1"
+      "dest": "/localization-management-api/src/localization_management_api/main.py"
     },
     {
       "src": "/(.*)",
