--- a/localization-management-frontend/package.json
+++ b/localization-management-frontend/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.50.1",
     "@tanstack/react-query": "^5.81.2",
     "@tanstack/react-query-devtools": "^5.81.2",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.10.0",
     "lodash": "^4.17.21",
     "next": "15.3.3",
